PTXprint 1.9 Release Notes 
28 July 2021

"Bible Layout For Everyone" - Easily create scripture PDFs for trial publications

Bug fixes and Improvements in 1.9.1 (28 Jul 2021) 

  * Added new Update button to status bar (shows if a newer version is available)
  
  * Diglot should obey nobreaks after headings better now
  
  * Fixed bug to support \zimagecopyrights with no lang be formatted with non \pc markers
  
  * Fixed bug of files missing from archive
  
  * Fixed missing missing page number on even Intro pages (NoVevenfooter)
  
  * Improved hiding of Intro and Intro-Outline to be more reliable
  
Bug fixes and Improvements in 1.9 (6 Jul 2021) 

  * Added button to Return to primary project when configuring secondary project of diglot
  
  * Fixed USFM parser heirarchy recovery
  
  * Fixed AdjList creation bug, and introduced better error message reporting
  
  * Hopefully prevent pagebreak mid-cutout for raised chapter labels
  
  * Fixed wrapping marginal verses
  
  * Improved functionality of 'at' changes so that this is now also possible:
        at ROM 1:3 '\\v 3' > '\\v 3-4'
        at ROM 1:4 '\\v 4 ' > '' 
  
  * Fixed and improved mymr syllable breaking
  
Bug fixes and Improvements in 1.8.9.1 (25 Jun 2021) 

  * Added option to Omit Captions for illustrations
  
  * Added PDF Output Format option for PDF standards conformance (Advanced page)
    (Digital=RGB, Print=CYMK, Transparency, and Archive)
  
  * Allow PDFs to be used as illustrations
  
  * Updated wording and graphics on the Layout page
  
  * Changed hard-to-find Adv/Basic mode slider to a Show More/Less button
  
  * Added hook to allow triggering of caller reset on chapter breaks
  
  * Fixed bug in auto-numbered callers and enable 
  
  * Fixed chapter number cutouts for \nb (no-break para over chapter boundary)

  * Fixed calculation for 'Space above header' on Layout page
  
  * Fixed error with picture positioning set for 'After Paragraph'
  